deploy/deploy-tx-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  replicas: 6
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: transaction-service
        image: ykoyfman/bank-transaction-service:1.0
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  ports:
  - port: 9080
    targetPort: 9080
  selector:
    app: transaction-service
