deploy/deploy-ui.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: mobile-simulator-service
    labels:
      app: mobile-simulator
  spec:
    ports:
      - port: 80
        protocol: TCP
        targetPort: 8080
    type: LoadBalancer
    selector:
      app: mobile-simulator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-simulator-deployment
  labels:
    app: mobile-simulator
spec:
  selector:
    matchLabels:
      app: mobile-simulator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mobile-simulator
    spec:
      containers:
        - image: ykoyfman/mobile-simulator:ga
          imagePullPolicy: Always
          name: mobile-simulator
          ports:
            - containerPort: 8080
