deploy/deploy-user-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: anthonyamanse/user-service:example-bank-1.0
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  ports:
  - port: 9080
    targetPort: 9080
  selector:
    app: user-service
